# Nexis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml  security.yml
.nexis/agents/: architect.yaml  reviewer.json  tester.yaml  workspace-coder.yaml
.nexis/memory/: 2026-03-07.md  2026-03-10.md
apps/mobile/: package-lock.json  package.json
apps/web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/app/: index.ts  router.tsx  types.ts
apps/web/src/app/layout/: AppShell.module.css  AppShell.tsx  SideNav.module.css  SideNav.tsx  TopBar.module.css  TopBar.tsx  index.ts
apps/web/src/app/routes/: ProtectedRoute.tsx
apps/web/src/components/: Layout.tsx
apps/web/src/features/auth/: LoginPage.module.css  LoginPage.tsx  authStore.ts  index.ts  types.ts
apps/web/src/features/members/: InviteMemberDialog.module.css  InviteMemberDialog.tsx  MemberTable.module.css  MemberTable.tsx  MembersPage.module.css  MembersPage.tsx  index.ts  membersStore.ts
apps/web/src/features/messages/: ConnectionBadge.module.css  ConnectionBadge.tsx  ConnectionState.module.css  ConnectionState.tsx  RoomDetailPage.module.css  RoomDetailPage.tsx  index.ts  messagesStore.ts
apps/web/src/features/rooms/: RoomListPage.module.css  RoomListPage.tsx  index.ts  roomsStore.ts
apps/web/src/features/search/: SearchBar.module.css  SearchBar.tsx  SearchPage.module.css  SearchPage.tsx  SearchResultList.module.css  SearchResultList.tsx  index.ts  searchStore.ts
apps/web/src/features/tenant/: TenantSwitcher.module.css  TenantSwitcher.tsx  index.ts  tenantStore.ts
apps/web/src/pages/: HomePage.tsx  RoomPage.tsx
apps/web/src/shared/api/: error.ts  httpClient.ts  index.ts
apps/web/src/test/: setup.ts
crates/nexis-cli/: Cargo.toml
crates/nexis-cli/src/: lib.rs  main.rs
crates/nexis-context/: Cargo.toml
crates/nexis-context/benches/: context_summarization.rs
crates/nexis-context/src/: ai_summarizer.rs  context.rs  error.rs  lib.rs  manager.rs  summarizer.rs  window.rs
crates/nexis-core/: Cargo.toml
crates/nexis-core/src/: lib.rs
crates/nexis-core/src/context/: mod.rs
crates/nexis-core/src/identity/: mod.rs
crates/nexis-core/src/message/: mod.rs
crates/nexis-core/src/permission/: mod.rs
crates/nexis-core/src/tenant/: mod.rs
crates/nexis-doc/: Cargo.toml
crates/nexis-doc/src/: document.rs  lib.rs
crates/nexis-doc/src/crdt/: document.rs  mod.rs  sync.rs  types.rs
crates/nexis-gateway/: Cargo.toml
crates/nexis-gateway/benches/: routing.rs  websocket_connections.rs
crates/nexis-gateway/migrations/: 0001_initial.sql  0002_add_tenant_id.sql
crates/nexis-gateway/src/: lib.rs  main.rs  metrics.rs
crates/nexis-gateway/src/auth/: mod.rs  tenant.rs
crates/nexis-gateway/src/collaboration/: mod.rs
crates/nexis-gateway/src/connection/: mod.rs  pool.rs
crates/nexis-gateway/src/db/: mod.rs
crates/nexis-gateway/src/indexing/: mod.rs  queue.rs  retry.rs  service.rs
crates/nexis-gateway/src/mcp/: mod.rs
crates/nexis-gateway/src/router/: mod.rs
crates/nexis-gateway/src/search/: mod.rs  service.rs
crates/nexis-gateway/src/server/: mod.rs
crates/nexis-gateway/tests/: collaboration_integration.rs
crates/nexis-gateway/tests/stress/: mod.rs
crates/nexis-mcp/: Cargo.toml
crates/nexis-mcp/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  registry.rs
crates/nexis-meeting/: Cargo.toml
crates/nexis-meeting/src/sfu/: mod.rs
crates/nexis-meeting/src/signaling/: mod.rs  protocol.rs  server.rs  types.rs
crates/nexis-protocol/: Cargo.toml
crates/nexis-protocol/src/: lib.rs
crates/nexis-runtime/: Cargo.toml
crates/nexis-runtime/src/: agent.rs  lib.rs  registry.rs  tool.rs
crates/nexis-runtime/src/embedding/: mod.rs  openai.rs
crates/nexis-runtime/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/nexis-vector/: Cargo.toml
crates/nexis-vector/src/: error.rs  lib.rs  qdrant.rs  store.rs  types.rs
docker/: Dockerfile.gateway
docs/: CONTRIBUTING.md  ENTERPRISE_STANDARDS.md  GAP_ANALYSIS.md  GITHUB_WORKFLOW_STATUS.md  PROGRESS.md  PROJECT_MANAGEMENT.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README.zh-CN.md  RELEASE_CHECKLIST.md  WORKFLOW.md  index.md
docs-src/src/architecture/: overview.md
docs/adr/: 000-record-architecture-decisions.md  001-rust-as-primary-language.md  002-axum-web-framework.md  003-ai-provider-abstraction.md  004-postgresql-for-persistence.md
docs/architecture/: tenant-model.md
docs/design/: nexis-vision-design.md  provider-system-design.md  skills-system-design.md
docs/en/api/: reference.md
docs/en/architecture/: review-2026-02-23.md
docs/en/getting-started/: quickstart.md
docs/en/roadmap/: 2026-02-27-cloud-native-ai-native.md  team-and-roadmap-2026.md
docs/plans/: 2025-02-20-phase3-intelligence.md  2026-02-14-nexis-architecture-design.md  2026-02-14-readme-driven-refactor-design.md  2026-02-14-readme-driven-refactor.md  2026-02-16-sprint-2.1-ai-provider-integration.md  2026-02-20-phase3-intelligence-impl.md  2026-02-21-phase4-scale.md  2026-02-24-t06-web-ui-core.md  AUTO_EXECUTION.md  phase3-todo.md
docs/security/: README.md  README.zh-CN.md  baseline.md  enterprise.md
docs/templates/: CODE_REVIEW_CHECKLIST.md  SPRING_PLANNING.md
docs/zh-CN/design/: a2a-protocol-design.md  core-capabilities-design.md
docs/zh-CN/getting-started/: quickstart.md
docs/zh-CN/roadmap/: team-and-roadmap-2026.md
k8s/: gateway.yaml
protocol/: nexis-id.md  nexis-mcp.md  nexis-msg.md
tests/: integration_openai.rs
tests/e2e/: ai_provider_test.rs  e2e_tests.rs  gateway_test.rs
tests/e2e/integration/: mod.rs
tests/security/: tenant_isolation_test.rs
tests/stress/: README.md
(+24 files in other folders)
