[workspace]
members = [
  "crates/nexis-core",
  "crates/nexis-protocol",
  "crates/nexis-mcp",
  "crates/nexis-gateway",
  "crates/nexis-runtime",
  "crates/nexis-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/schorsch888/Nexis"
homepage = "https://nexis.ai"
documentation = "https://docs.nexis.ai"
authors = ["Nexis Team <team@nexis.ai>"]
description = "AI-Native Team Communication Platform"
keywords = ["ai", "collaboration", "communication", "mcp", "real-time"]
categories = ["network-programming", "web-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Web Framework
axum = "0.7"
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
hyper = { version = "1.1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
axum-extra = { version = "0.9", features = ["typed-header", "query"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
qdrant-client = "1.7"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap_complete = "4.5"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.5"
base64 = "0.22"
hex = "0.4"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Testing
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"

# Internal crates
nexis-core = { path = "crates/nexis-core" }
nexis-protocol = { path = "crates/nexis-protocol" }
nexis-mcp = { path = "crates/nexis-mcp" }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 2
debug = true

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints
module_name_repetitions = "allow"
too_many_lines = "allow"
many_single_char_names = "allow"
similar_names = "allow"
