[package]
name = "nexis-cli"
version.workspace = true
edition.workspace = true
description = "Nexis command line client"
license.workspace = true

[dependencies]
nexis-core = { path = "../nexis-core" }
clap.workspace = true
futures = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
