[package]
name = "nexis-cli"
version.workspace = true
edition.workspace = true
description = "Nexis command line client"
license.workspace = true

[dependencies]
nexis-core = { path = "../nexis-core" }
nexis-runtime = { path = "../nexis-runtime" }
clap.workspace = true
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
rustyline = "14"
colored = "2"

[dev-dependencies]
httpmock = { workspace = true }
