[package]
name = "nexis-context"
description = "Nexis context management and windowing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Token counting
tokenizers = { version = "0.21", optional = true }

# AI-powered summarization
nexis-runtime = { path = "../nexis-runtime", optional = true }

[features]
default = []
token-counting = ["tokenizers"]
ai-summarizer = ["nexis-runtime"]

[dev-dependencies]
tokio-test = { workspace = true }
