[package]
name = "nexis-core"
description = "Nexis core library - identity, permissions, and domain types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"

[features]
default = []
full = ["postgres", "redis"]
postgres = []
redis = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
