[package]
name = "nexis-doc"
description = "Nexis real-time document collaboration domain types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
yrs = "0.21"
smallvec = { version = "1.13", features = ["serde"] }
