[package]
name = "nexis-gateway"
description = "Nexis Control Plane - gateway, routing, and orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nexis-gateway"
path = "src/main.rs"

[features]
default = []
persistence-sqlx = ["dep:sqlx"]

[dependencies]
# Web
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio-tungstenite = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# Database
sqlx = { workspace = true, optional = true }

# Security
jsonwebtoken = { workspace = true }

# Metrics
prometheus = "0.14"
lazy_static = "1.4"

# Internal
nexis-core = { workspace = true }
nexis-protocol = { workspace = true }
nexis-mcp = { workspace = true }
nexis-runtime = { workspace = true }
nexis-vector = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
reqwest = { workspace = true }

[[bench]]
name = "routing"
harness = false
