[package]
name = "nexis-runtime"
description = "Nexis runtime provider abstractions and test stubs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true }
