[package]
name = "nexis-runtime"
description = "Nexis runtime provider abstractions and test stubs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
dotenvy = "0.15"
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "ai_provider_test"
path = "../../tests/e2e/ai_provider_test.rs"
