[package]
name = "nexis-vector"
description = "Nexis vector storage and semantic search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

qdrant-client = { workspace = true, optional = true }

[features]
default = []
qdrant = ["qdrant-client"]

[dev-dependencies]
tokio-test = { workspace = true }
